--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,6 +27,7 @@ android {
 
     defaultConfig {
         minSdkVersion 16
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     lintOptions {
@@ -38,5 +39,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0'
     implementation 'com.facebook.android:audience-network-sdk:6.+'
     implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     compileOnly files('tempLibs/flutter.jar')
 }
